--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,3 +83,5 @@ endif()
 set_target_properties(llama PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 add_subdirectory(test)
 add_subdirectory(demo)
+
+enable_testing() 
