--- a/test/Makefile
+++ b/test/Makefile
@@ -65,6 +65,16 @@ CMAKE_BINARY_DIR = /home/haotian/kuiper_chsto
 #=============================================================================
 # Targets provided globally by CMake.
 
+# Special rule for the target test
+test:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running tests..."
+	/usr/bin/ctest --force-new-ctest-process $(ARGS)
+.PHONY : test
+
+# Special rule for the target test
+test/fast: test
+.PHONY : test/fast
+
 # Special rule for the target edit_cache
 edit_cache:
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "No interactive CMake dialog available..."
@@ -154,6 +164,30 @@ optimized/test_allocator.cpp.s:
 	cd /home/haotian/kuiper_chsto && $(MAKE) $(MAKESILENT) -f test/CMakeFiles/test_llm.dir/build.make test/CMakeFiles/test_llm.dir/optimized/test_allocator.cpp.s
 .PHONY : optimized/test_allocator.cpp.s
 
+test_cu/test_cu_add.o: test_cu/test_cu_add.cpp.o
+.PHONY : test_cu/test_cu_add.o
+
+# target to build an object file
+test_cu/test_cu_add.cpp.o:
+	cd /home/haotian/kuiper_chsto && $(MAKE) $(MAKESILENT) -f test/CMakeFiles/test_llm.dir/build.make test/CMakeFiles/test_llm.dir/test_cu/test_cu_add.cpp.o
+.PHONY : test_cu/test_cu_add.cpp.o
+
+test_cu/test_cu_add.i: test_cu/test_cu_add.cpp.i
+.PHONY : test_cu/test_cu_add.i
+
+# target to preprocess a source file
+test_cu/test_cu_add.cpp.i:
+	cd /home/haotian/kuiper_chsto && $(MAKE) $(MAKESILENT) -f test/CMakeFiles/test_llm.dir/build.make test/CMakeFiles/test_llm.dir/test_cu/test_cu_add.cpp.i
+.PHONY : test_cu/test_cu_add.cpp.i
+
+test_cu/test_cu_add.s: test_cu/test_cu_add.cpp.s
+.PHONY : test_cu/test_cu_add.s
+
+# target to generate assembly for a file
+test_cu/test_cu_add.cpp.s:
+	cd /home/haotian/kuiper_chsto && $(MAKE) $(MAKESILENT) -f test/CMakeFiles/test_llm.dir/build.make test/CMakeFiles/test_llm.dir/test_cu/test_cu_add.cpp.s
+.PHONY : test_cu/test_cu_add.cpp.s
+
 test_main.o: test_main.cpp.o
 .PHONY : test_main.o
 
@@ -210,10 +244,14 @@ help:
 	@echo "... depend"
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
+	@echo "... test"
 	@echo "... test_llm"
 	@echo "... optimized/test_allocator.o"
 	@echo "... optimized/test_allocator.i"
 	@echo "... optimized/test_allocator.s"
+	@echo "... test_cu/test_cu_add.o"
+	@echo "... test_cu/test_cu_add.i"
+	@echo "... test_cu/test_cu_add.s"
 	@echo "... test_main.o"
 	@echo "... test_main.i"
 	@echo "... test_main.s"
